// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapBox Selectors should select mapStyle correctly 1`] = `
Object {
  "composite": Object {
    "type": "vector",
    "url": "mapbox://mapbox.mapbox-streets-v8,mapbox.mapbox-terrain-v2",
  },
  "react-starter-kit": Object {
    "data": Object {
      "features": Array [
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
        Object {
          "geometry": Object {
            "coordinates": Array [
              Array [
                -118.46742,
                34.00534,
              ],
              Array [
                -118.47105,
                34.00321,
              ],
              Array [
                -118.47115,
                34.00309,
              ],
              Array [
                -118.47325,
                34.00463,
              ],
              Array [
                -118.47629,
                34.00289,
              ],
              Array [
                -118.48058,
                33.99993,
              ],
              Array [
                -118.48113,
                33.99954,
              ],
              Array [
                -118.48088,
                33.9993,
              ],
              Array [
                -118.48088,
                33.99928,
              ],
            ],
            "type": "LineString",
          },
          "properties": Object {},
          "type": "Feature",
        },
      ],
      "type": "FeatureCollection",
    },
    "type": "geojson",
  },
}
`;

exports[`MapBox Selectors should select source correctly 1`] = `
Object {
  "data": Object {
    "features": Array [
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
      Object {
        "geometry": Object {
          "coordinates": Array [
            Array [
              -118.46742,
              34.00534,
            ],
            Array [
              -118.47105,
              34.00321,
            ],
            Array [
              -118.47115,
              34.00309,
            ],
            Array [
              -118.47325,
              34.00463,
            ],
            Array [
              -118.47629,
              34.00289,
            ],
            Array [
              -118.48058,
              33.99993,
            ],
            Array [
              -118.48113,
              33.99954,
            ],
            Array [
              -118.48088,
              33.9993,
            ],
            Array [
              -118.48088,
              33.99928,
            ],
          ],
          "type": "LineString",
        },
        "properties": Object {},
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "type": "geojson",
}
`;
